[package]
name = "vec_to_array"
license = "MIT"
version = "0.2.4"
edition = "2021"
description = "Moves a heap allocated `Vec<T>` to an stack allocated array of type `T` and size `N`."
repository = "https://github.com/mcmah309/vec_to_array"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]